--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
 
 <!-- NAVBAR START (change the icons to nav item)-->
 <nav class="navbar navbar-expand-lg bg-dark">
-  <div class="container-fluid">
-		<a class="navbar-brand" href="#"><IMG src="Images\AubioHaus.png" /></a>
+	<div class="nav-item">
+		<a class="navbar-brand" href="#"><IMG src="Images\AubioHaus.png"/></a>
+	</div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -63,26 +64,57 @@
 			<div class="elementor-element elementor-element-b0e3ecd e-con-full e-con" data-id="b0e3ecd" data-element_type="container" data-settings="{&quot;content_width&quot;:&quot;full&quot;}">
 				<div class="elementor-element elementor-element-77ce78e e-grid-align-right e-grid-align-tablet-right elementor-shape-rounded elementor-grid-0 elementor-widget elementor-widget-social-icons elementor-sticky" data-id="77ce78e" data-element_type="widget" data-settings="{&quot;sticky&quot;:&quot;top&quot;,&quot;sticky_on&quot;:[&quot;mobile&quot;],&quot;sticky_offset&quot;:23,&quot;sticky_effects_offset&quot;:0}" data-widget_type="social-icons.default">
 					<div class="elementor-widget-container">
-						<span class="elementor-grid-item">
+						<span class="nav-item">
 							<a class="elementor-icon elementor-social-icon elementor-social-icon-reddit elementor-animation-grow elementor-repeater-item-cadc557" href="https://www.google.com/search?client=avast-a-2&q=this+goes+to+a+related+subreddit&oq=this+goes+to+a+related+subreddit&aqs=avast..69i57.7242j0j1&ie=UTF-8" target="_blank">
 							<span class="elementor-screen-only"> </span>
 							<svg class="e-font-icon-svg e-fab-reddit" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M201.5 305.5c-13.8 0-24.9-11.1-24.9-24.6 0-13.8 11.1-24.9 24.9-24.9 13.6 0 24.6 11.1 24.6 24.9 0 13.6-11.1 24.6-24.6 24.6zM504 256c0 137-111 248-248 248S8 393 8 256 119 8 256 8s248 111 248 248zm-132.3-41.2c-9.4 0-17.7 3.9-23.8 10-22.4-15.5-52.6-25.5-86.1-26.6l17.4-78.3 55.4 12.5c0 13.6 11.1 24.6 24.6 24.6 13.8 0 24.9-11.3 24.9-24.9s-11.1-24.9-24.9-24.9c-9.7 0-18 5.8-22.1 13.8l-61.2-13.6c-3-.8-6.1 1.4-6.9 4.4l-19.1 86.4c-33.2 1.4-63.1 11.3-85.5 26.8-6.1-6.4-14.7-10.2-24.1-10.2-34.9 0-46.3 46.9-14.4 62.8-1.1 5-1.7 10.2-1.7 15.5 0 52.6 59.2 95.2 132 95.2 73.1 0 132.3-42.6 132.3-95.2 0-5.3-.6-10.8-1.9-15.8 31.3-16 19.8-62.5-14.9-62.5zM302.8 331c-18.2 18.2-76.1 17.9-93.6 0-2.2-2.2-6.1-2.2-8.3 0-2.5 2.5-2.5 6.4 0 8.6 22.8 22.8 87.3 22.8 110.2 0 2.5-2.2 2.5-6.1 0-8.6-2.2-2.2-6.1-2.2-8.3 0zm7.7-75c-13.6 0-24.6 11.1-24.6 24.9 0 13.6 11.1 24.6 24.6 24.6 13.8 0 24.9-11.1 24.9-24.6 0-13.8-11-24.9-24.9-24.9z"></path></svg> </a>
+							<div class="p-5"></div>
 						</span>
-						<span class="elementor-grid-item">
+						<span class="nav-item">
 							<a class="elementor-icon elementor-social-icon elementor-social-icon-instagram elementor-animation-grow elementor-repeater-item-80f5ce7" href="https://www.google.com/search?q=this+goes+to+a+related+instagram&client=avast-a-2&ei=yAaAZPvXIo6N2roPuoG02A0&ved=0ahUKEwj724e8qLD_AhWOhlYBHboADdsQ4dUDCA8&uact=5&oq=this+goes+to+a+related+instagram&gs_lcp=Cgxnd3Mtd2l6LXNlcnAQAzIFCCEQoAEyBQghEKABOgsIABCKBRCGAxCwAzoKCCEQFhAeEA8QHToICCEQFhAeEB06BwghEKABEApKBAhBGAFQqV9YgWpgzG1oAXAAeACAAe8BiAHiDpIBBTAuMy42mAEAoAEBwAEByAED&sclient=gws-wiz-serp" target="_blank">
 							<span class="elementor-screen-only"> </span>
 							<svg class="e-font-icon-svg e-fab-instagram" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path></svg> </a>
+							<div class="p-5"></div>
 						</span>
-						<span class="elementor-grid-item">
+						<span class="nav-item">
 							<a class="elementor-icon elementor-social-icon elementor-social-icon-youtube elementor-animation-grow elementor-repeater-item-1304693" href="https://www.google.com/search?q=this+goes+to+a+related+youtube&client=avast-a-2&ei=6AaAZKmhLPay2roPzqaY2As&ved=0ahUKEwiptbLLqLD_AhV2mVYBHU4TBrsQ4dUDCA8&uact=5&oq=this+goes+to+a+related+youtube&gs_lcp=Cgxnd3Mtd2l6LXNlcnAQAzoKCAAQRxDWBBCwAzoFCCEQoAE6CgghEBYQHhAPEB06CAghEBYQHhAdOgcIIRCgARAKSgQIQRgAUM8FWM0dYOAfaANwAXgAgAH2AYgB1w-SAQUwLjEuOJgBAKABAcABAcgBCA&sclient=gws-wiz-serp" target="_blank">
 							<span class="elementor-screen-only"> </span>
 							<svg class="e-font-icon-svg e-fab-youtube" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg"><path d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"></path></svg> </a>
+							<div class="p-5"></div>
 						</span>
 					</div>
 				</div>
 			</div>
 		</nav>
     </div>
+</nav>
+
+
+<nav class="navbar navbar-expand-lg bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"><IMG src="Images\AubioHaus.png"/></a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	<div class="elementor-element elementor-element-77ce78e e-grid-align-right e-grid-align-tablet-right elementor-shape-rounded elementor-grid-0 elementor-widget elementor-widget-social-icons elementor-sticky" data-id="77ce78e" data-element_type="widget" data-settings="{&quot;sticky&quot;:&quot;top&quot;,&quot;sticky_on&quot;:[&quot;mobile&quot;],&quot;sticky_offset&quot;:23,&quot;sticky_effects_offset&quot;:0}" data-widget_type="social-icons.default">
+
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div class="nav-item">
+			<a class="elementor-icon elementor-social-icon elementor-social-icon-reddit elementor-animation-grow elementor-repeater-item-cadc557" href="https://www.google.com/search?client=avast-a-2&q=this+goes+to+a+related+subreddit&oq=this+goes+to+a+related+subreddit&aqs=avast..69i57.7242j0j1&ie=UTF-8" target="_blank">
+			<span class="elementor-screen-only"> </span>
+			<svg class="e-font-icon-svg e-fab-reddit" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M201.5 305.5c-13.8 0-24.9-11.1-24.9-24.6 0-13.8 11.1-24.9 24.9-24.9 13.6 0 24.6 11.1 24.6 24.9 0 13.6-11.1 24.6-24.6 24.6zM504 256c0 137-111 248-248 248S8 393 8 256 119 8 256 8s248 111 248 248zm-132.3-41.2c-9.4 0-17.7 3.9-23.8 10-22.4-15.5-52.6-25.5-86.1-26.6l17.4-78.3 55.4 12.5c0 13.6 11.1 24.6 24.6 24.6 13.8 0 24.9-11.3 24.9-24.9s-11.1-24.9-24.9-24.9c-9.7 0-18 5.8-22.1 13.8l-61.2-13.6c-3-.8-6.1 1.4-6.9 4.4l-19.1 86.4c-33.2 1.4-63.1 11.3-85.5 26.8-6.1-6.4-14.7-10.2-24.1-10.2-34.9 0-46.3 46.9-14.4 62.8-1.1 5-1.7 10.2-1.7 15.5 0 52.6 59.2 95.2 132 95.2 73.1 0 132.3-42.6 132.3-95.2 0-5.3-.6-10.8-1.9-15.8 31.3-16 19.8-62.5-14.9-62.5zM302.8 331c-18.2 18.2-76.1 17.9-93.6 0-2.2-2.2-6.1-2.2-8.3 0-2.5 2.5-2.5 6.4 0 8.6 22.8 22.8 87.3 22.8 110.2 0 2.5-2.2 2.5-6.1 0-8.6-2.2-2.2-6.1-2.2-8.3 0zm7.7-75c-13.6 0-24.6 11.1-24.6 24.9 0 13.6 11.1 24.6 24.6 24.6 13.8 0 24.9-11.1 24.9-24.6 0-13.8-11-24.9-24.9-24.9z"></path></svg> </a>
+        </div>
+		<div class="nav-item">
+			<a class="elementor-icon elementor-social-icon elementor-social-icon-instagram elementor-animation-grow elementor-repeater-item-80f5ce7" href="https://www.google.com/search?q=this+goes+to+a+related+instagram&client=avast-a-2&ei=yAaAZPvXIo6N2roPuoG02A0&ved=0ahUKEwj724e8qLD_AhWOhlYBHboADdsQ4dUDCA8&uact=5&oq=this+goes+to+a+related+instagram&gs_lcp=Cgxnd3Mtd2l6LXNlcnAQAzIFCCEQoAEyBQghEKABOgsIABCKBRCGAxCwAzoKCCEQFhAeEA8QHToICCEQFhAeEB06BwghEKABEApKBAhBGAFQqV9YgWpgzG1oAXAAeACAAe8BiAHiDpIBBTAuMy42mAEAoAEBwAEByAED&sclient=gws-wiz-serp" target="_blank">
+			<span class="elementor-screen-only"> </span>
+			<svg class="e-font-icon-svg e-fab-instagram" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path></svg> </a>
+        </div>
+        <div class="nav-item">
+			<a class="elementor-icon elementor-social-icon elementor-social-icon-youtube elementor-animation-grow elementor-repeater-item-1304693" href="https://www.google.com/search?q=this+goes+to+a+related+youtube&client=avast-a-2&ei=6AaAZKmhLPay2roPzqaY2As&ved=0ahUKEwiptbLLqLD_AhV2mVYBHU4TBrsQ4dUDCA8&uact=5&oq=this+goes+to+a+related+youtube&gs_lcp=Cgxnd3Mtd2l6LXNlcnAQAzoKCAAQRxDWBBCwAzoFCCEQoAE6CgghEBYQHhAPEB06CAghEBYQHhAdOgcIIRCgARAKSgQIQRgAUM8FWM0dYOAfaANwAXgAgAH2AYgB1w-SAQUwLjEuOJgBAKABAcABAcgBCA&sclient=gws-wiz-serp" target="_blank">
+			<span class="elementor-screen-only"> </span>
+			<svg class="e-font-icon-svg e-fab-youtube" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg"><path d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"></path></svg> </a>
+        </div>
+      </ul>
+    </div>
+  </div>
   </div>
 </nav>
 <!-- NAVBARD END -->
@@ -179,8 +211,14 @@
 
 <!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING (START) -->
 <div class="container-fluid">
-	<n> New Update	</n>
-	<n> Placeholder Date </n>
+	<div class="btn-group">
+  <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Large button
+  </button>
+  <ul class="dropdown-menu">
+    ...
+  </ul>
+</div>
 </div>
 <!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING (END) -->
 
@@ -188,7 +226,7 @@
 
 <!-- Footer START -->
 <footer>
-	<div class="container-fluid footer py-3">
+	<div class="container-fluid footer py-3 bg-dark">
 		BOBOBOBOBOBOBBOBOBOBOBOBOBBOBOBOBOBOBOBOBOBBOBOBOBOBOBOBOBOBOBOOBOBOBOBOBOBOBOBO
 	</div>
 </footer>
